--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -12,7 +12,7 @@ aptPkgs = [
 ]
 
 [phases.install]
-commands = ["pip install --no-cache-dir -r requirements.txt"]
+commands = ["python -m pip install --no-cache-dir -r requirements.txt"]
 
 [start]
 cmd = "streamlit run app.py --server.port $PORT --server.address 0.0.0.0"
