--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -13,7 +13,7 @@ aptPkgs = [
 
 [phases.install]
 commands = [
-  "python -m ensurepip --upgrade",
+  "apt-get update && apt-get install -y libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf-2.0-0 libglib2.0-0 libgirepository-1.0-1 gobject-introspection libffi-dev shared-mime-info build-essential",
   "python -m pip install --no-cache-dir -r requirements.txt"
 ]
 
