--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,88 @@
-# --- Núcleo da aplicação ---
-streamlit==1.50.0
-jinja2==3.1.6
-python-decouple==3.8
-pillow==11.0.0
-pandas==2.2.3
-numpy==2.2.2
-
-# --- PDFs e HTML (WeasyPrint + PDF) ---
-weasyprint==66.0
-pdfplumber==0.11.1
-pypdf==6.0.0
-tinycss2==1.3.0
-pyphen==0.17.0
-
-# --- OpenAI e LangChain ---
-openai==1.53.0
-langchain==0.3.4
-langchain-openai==0.2.5
-langchain-community==0.3.3
-langgraph==0.0.52
-tiktoken==0.8.0
-
-# --- Utilitários ---
-requests==2.32.3
-regex==2024.11.6
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.4.0
+blinker==1.9.0
+Brotli==1.1.0
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+cryptography==46.0.3
+cssselect2==0.8.0
+distro==1.9.0
+exceptiongroup==1.3.0
+fonttools==4.60.1
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+Jinja2==3.1.6
+jiter==0.11.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+langchain==1.0.2
+langchain-core==1.0.1
+langchain-openai==1.0.1
+langchain-text-splitters==1.0.0
+langgraph==1.0.1
+langgraph-checkpoint==3.0.0
+langgraph-prebuilt==1.0.1
+langgraph-sdk==0.2.9
+langsmith==0.4.38
+MarkupSafe==3.0.3
+narwhals==2.10.0
+numpy==2.2.6
+openai==2.6.1
+orjson==3.11.4
+ormsgpack==1.11.0
+packaging==25.0
+pandas==2.3.3
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pillow==11.3.0
+protobuf==6.33.0
+pyarrow==22.0.0
+pycparser==2.23
+pydantic==2.12.3
+pydantic_core==2.41.4
+pydeck==0.9.1
+pydyf==0.11.0
+pypdf==6.1.3
+pypdfium2==5.0.0
+pyphen==0.17.2
 python-dateutil==2.9.0.post0
-pytz==2024.2
-tzdata==2024.2
+python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+regex==2025.10.23
+requests==2.32.5
+requests-toolbelt==1.0.0
+rpds-py==0.28.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.50.0
+tenacity==9.1.2
+tiktoken==0.12.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 toml==0.10.2
-typing_extensions==4.12.2
-certifi==2024.8.30
-charset-normalizer==3.3.2
-idna==3.8
-urllib3==2.2.3
+tornado==6.5.2
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+weasyprint==66.0
+webencodings==0.5.1
+xxhash==3.6.0
+zopfli==0.2.3.post1
+zstandard==0.25.0
